encrypt and decrypt is done