@@ -17,60 +17,34 @@ import java.util.stream.Collectors;
 public class MedicineController {
 private final PatientService patientService;
 
-    /*@GetMapping("/index")
-    public String index(Model model){
-        return "index";
-    }
-    @GetMapping("/about")
-    public String about(Model model){
-        return "about";
-    }
-    @GetMapping("/appointment")
-    public String appointment(Model model){
-        return "appointment";
-    }
-    @GetMapping("/blog")
-    public String blog(Model model){
-        return "blog";
-    }
 
-    @GetMapping("/contact")
-    public String contact(Model model){
-        return "contact";
-    }
-    @GetMapping("/detail")
-    public String detail(Model model){
-        return "detail";
-    }
-
-    @GetMapping("/search")
-    public String search(Model model){
-        return "search";
-    }
-    @GetMapping("/service")
-    public String service(Model model){
-        return "service";
-    }
-    @GetMapping("/team")
-    public String team(Model model){
-        return "team";
-    }
-    @GetMapping("/testimonial")
-    public String testimonial(Model model){
-        return "testimonial";
-    }*/
     @GetMapping("/register")
     public String price(
-          /*  @RequestParam("typeIllness") String typeIllness,
-            @RequestParam("username") String username,
-            @RequestParam("fullName") String fullName,
-            @RequestParam("email") String email,
-            @RequestParam("password") String password,*/
+
             Model model
     ){
-        model.addAttribute("patients" , patientService.patients());
-        model.addAttribute("encrypts" , patientService.patients().stream().map(Encrypt::encryptPatient).collect(Collectors.toList()) );
-        model.addAttribute("decrypts" , patientService.patients().stream().map(Encrypt::encryptPatient).toList().stream().map(Decrypting::decryptPatient).toList());
+
+        model.addAttribute(
+                "patients" ,
+                patientService
+                        .patients());
+        model.addAttribute(
+                "encrypts" ,
+                patientService
+                        .patients()
+                        .stream()
+                        .map(Encrypt::encryptPatient)
+                        .toList());
+        model.addAttribute(
+                "decrypts" ,
+                patientService
+                        .patients()
+                        .stream()
+                        .map(Encrypt::encryptPatient)
+                        .toList()
+                        .stream()
+                        .map(Decrypting::decryptPatient)
+                        .toList());
         model.addAttribute("model" , new Patient());
         return "register";
     }
@@ -78,8 +52,6 @@ private final PatientService patientService;
     @GetMapping("/add-register")
     public String save(@ModelAttribute("model") Patient patient , Model model){
        patientService.save(patient);
-
-
         return "redirect:/register";
     }
 
